# codex-pet-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
codex_pet/: __init__.py  atlas.py  cli.py  creature.py  install.py  preview.py  scaffold.py
examples/blob/: build.py
examples/creature/: build.py
examples/mario/: README.md  build.py
